name:                lens-over-tea
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/passy/lens-over-tea#readme
license:             BSD3
license-file:        LICENSE
author:              Pascal Hartig
maintainer:          phartig@rdrei.net
copyright:           2016, Pascal Hartig
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable lens1
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable lens2
  hs-source-dirs:      src
  main-is:             Main2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -fdefer-type-errors

executable lens3
  hs-source-dirs:      src
  main-is:             Main3.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , transformers
  ghc-options:         -Wall
                       -fwarn-tabs
                       -fwarn-incomplete-record-updates
                       -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind
                       -auto-all
                       -caf-all
